# okx-rs

./: .gitignore  Cargo.toml  READED.MD
account/: Cargo.toml  README.md
account/.openapi-generator/: FILES
account/docs/: AccountApi.md  ApiV5AccountPositionMarginBalancePostRequest.md  ApiV5AccountSetGreeksPostRequest.md  ApiV5AccountSetIsolatedModePostRequest.md  ApiV5AccountSetLeveragePostRequest.md  ApiV5AccountSetPositionModePostRequest.md  ApiV5AccountSimulatedMarginPostRequest.md
account/src/apis/: account_api.rs  configuration.rs  mod.rs
account/src/models/: _api_v5_account_balance_response.rs  _api_v5_account_position_margin_balance_post_request.rs  _api_v5_account_set_greeks_post_request.rs  _api_v5_account_set_isolated_mode_post_request.rs  _api_v5_account_set_leverage_post_request.rs  _api_v5_account_set_position_mode_post_request.rs  _api_v5_account_simulated_margin_post_request.rs  mod.rs
api-spec/: account.json  blockTrading.json  fundings.json  market.json  public.json  trade.json  tradingData.json
block_trading/: Cargo.toml  README.md
block_trading/.openapi-generator/: FILES
block_trading/docs/: ApiV5RfqCancelBatchQuotesPostRequest.md  ApiV5RfqCancelBatchRfqsPostRequest.md  ApiV5RfqCancelQuotePostRequest.md  ApiV5RfqCancelRfqPostRequest.md  ApiV5RfqCreateQuotePostRequest.md  ApiV5RfqCreateRfqPostRequest.md  ApiV5RfqExecuteQuotePostRequest.md  ApiV5RfqMakerInstrumentSettingsPostRequest.md  DefaultApi.md
finance/: Cargo.toml
finance/src/: lib.rs
finance/src/apis/: configuration.rs  finance_apis.rs  mod.rs
finance/src/models/: mod.rs  purchase_redempt.rs  savings_balance.rs
fundings/: Cargo.toml  README.md
fundings/.openapi-generator/: FILES
fundings/docs/: ApiV5AssetTransferPostRequest.md  FundingsApi.md
market/: Cargo.toml  README.md
market/.openapi-generator/: FILES
market/docs/: MarketDataApi.md
public/: Cargo.toml  README.md
public/.openapi-generator/: FILES
public/docs/: PublicDataApi.md
query/: Cargo.toml
query/src/: account.rs  gecko.rs  main.rs  model.rs
trade/: Cargo.toml  README.md
trade/.openapi-generator/: FILES
trade/docs/: ApiV5TradeAmendOrderPostRequest.md  ApiV5TradeCancelAlgosPostRequest.md  TradeApi.md  (+4 more)
trading_data/: Cargo.toml  README.md
(+36 files in other folders)
