[package]
name = "finance"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
chrono ="0.4.39"
base64 = "0.22.1"
sha2 = "0.10.8"
hmac = "0.12.1"
anyhow = "1.0"
