[package]
name = "query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.24", features = ["derive","env"] }
account = { path = "../account" }
fundings = {path="../fundings"}
tokio = {version = "1.43.0",features = ["full"]}
serde_json = "1.0.135"
finance = {path="../finance"}
serde = { version = "^1.0", features = ["derive"] }
anyhow="1.0"