[package]
name = "query"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.24", features = ["derive","env"] }
account = { path = "../account" }
fundings = {path="../fundings"}
tokio = {version = "1.43.0",features = ["full"]}
serde_json = "1.0.135"
finance = {path="../finance"}
serde = { version = "^1.0", features = ["derive"] }
anyhow="1.0"
reqwest = { version = "^0.12", features = ["json", "multipart","blocking"] }
public ={path = "../public"}
market ={path = "../market"}
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"